--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Blayklee Freed, aficiando</title>
+		<!-- Link to main style sheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css"/>
 	</head>
 	<body>
 		<nav>
